--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <div id="coord_list"></div>
     <form class="form-inline">
       <label>Geometry type &nbsp;</label>
+      <select id="geo_type" name='geo_type'>
+        <option value="Constant">Constant</option>
+        <option value="Coord">Coord</option> 
+        
+      </select>
+      <label>Coords load &nbsp;</label>
       <select id="type">
         <!-- <option value="Polygon">Polygon</option> -->
         <option value="None">None</option>
