--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     <form class="form-inline">
       <label>Geometry type &nbsp;</label>
       <select id="geo_type" name='geo_type'>
-        <option value="Constant">Constant</option>
         <option value="Coord">Coord</option> 
-        
+        <option value="Constant">Constant</option>
       </select>
       <label>Coords load &nbsp;</label>
       <select id="type">
@@ -41,6 +40,7 @@
     
     <div id="qr" style="width: 300px; height: 300px;"></div>
     <a href="./hook.html">입출차QR</a>
+    <!-- <a href="./kakaoMap.html">다음지도</a> -->
     <script src="./src/js/main.js"></script>
     <!-- <script src="leaflet.js"></script> -->
     <script src="./src/js/qr.js"></script>
