--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <select id="type">
         <!-- <option value="Polygon">Polygon</option> -->
         <option value="None">None</option>
+        <option value="Draw">Draw</option>
         <option value="Area">Area</option>
         <option value="Building">Building</option>
         <option value="Road">Road</option>
